--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@tailwindcss/postcss": "^4.1.4",
+    "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.9.0",
     "boxicons": "^2.1.4",
     "lucide-react": "^0.488.0",
@@ -31,7 +32,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.4",
+    "tailwindcss": "^4.1.17",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
     "vite": "^6.3.0"
